Add theme color meta tag

--- a/manifest.json
+++ b/manifest.json
@@ -14,8 +14,8 @@
 		}
 	],
 	"start_url": "/",
-	"background_color": "#555555",
+	"background_color": "#afafaf",
 	"display": "standalone",
-	"theme_color": "#555555",
+	"theme_color": "#afafaf",
 	"scope": "./"
 }
